--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./utilits/variables";
 @import "./base/common";
 @import "./components/containers";
+@import "./components/logo";
 @import "./layout/01-header";
 @import "./layout/02-hero";
 @import "./layout/03-travel";
