--- a/css/main.css
+++ b/css/main.css
@@ -47,4 +47,94 @@ button {
 
 textarea {
   outline: none;
+}
+
+:root {
+  --main-color: #DD2242;
+  --blue---background: #010a20;
+  --white: #fff;
+  --text-lighten: #e0e0e0;
+  --grey-reduced: #85a3b2;
+  --light-text: rgba(21, 20, 57, 0.4);
+  --paragraph-dark: #6f7787;
+  --font-family: "DM Sans", sans-serif;
+  --second-family: "Roboto", sans-serif;
+}
+
+body {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 156%;
+  letter-spacing: 0.01em;
+  color: var(--text-lighten);
+}
+
+.container {
+  width: 100%;
+  min-width: 320px;
+  max-width: 1920px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 375px) {
+  .container {
+    width: 375px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .container {
+    width: 1920px;
+  }
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 50px;
+  width: 155px;
+  gap: 5px;
+  position: relative;
+  background-color: black;
+}
+.logo__text {
+  font-family: var(--second-family);
+  font-weight: 900;
+  font-size: 23px;
+  line-height: 81%;
+  letter-spacing: 0.01em;
+  text-transform: uppercase;
+  color: var(--white);
+}
+.logo__rectangle {
+  position: absolute;
+  top: 30px;
+  left: 0px;
+  width: 100%;
+  height: 20px;
+  background: linear-gradient(180deg, rgba(1, 132, 149, 0) 0%, #018394 100%);
+  opacity: 0.7;
+}
+
+.header {
+  margin-top: 28px;
+  margin-bottom: 170px;
+  display: flex;
+}
+.header__nav {
+  margin-left: 95px;
+  display: flex;
+}
+.header__nav .hlist {
+  display: none;
+}
+.header__nav .hlist-mobile {
+  display: flex;
+  gap: 30px;
 }/*# sourceMappingURL=main.css.map */
