--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,11 +3,11 @@
     flex-direction: column;
     flex-wrap: wrap;
     height: 50px;
-    width: 155px;
+    width: 165px;
     gap: 5px;
     position: relative;
 
-    background-color: black;
+    // background-color: black;
     
 
     &__text {
@@ -24,7 +24,7 @@
         position: absolute;
         top: 30px;
         left: 0px;
-        width: 100%;
+        width: 110%;
         height: 20px;
         background: linear-gradient(180deg, rgba(1, 132, 149, 0) 0%, #018394 100%);
         opacity: 0.7;
