--- a/css/main.css
+++ b/css/main.css
@@ -266,4 +266,245 @@ body {
 }
 .hero__vertical {
   display: none;
+}
+
+.walkways {
+  background-image: url(../images/overlay.svg);
+  background-color: var(--blue---background);
+}
+.walkways__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 115%;
+  color: var(--white);
+}
+.walkways__description {
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.03em;
+  color: var(--text-lighten);
+}
+.walkways__button {
+  border-radius: 32px;
+  padding: 10px;
+  width: 100%;
+  height: 72px;
+  background: var(--main-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 150%;
+  text-align: center;
+  color: rgb(255, 255, 255);
+}
+.walkways__overlay1 {
+  padding-top: 40px;
+  margin-bottom: 56px;
+  background-image: url(../images/walkways-background-m-1x.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .walkways__overlay1 {
+    background-image: url(../images/walkways-background-m-2x.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .walkways__overlay1 {
+    background-image: url(../images/walkways-background-td-1x.png);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .walkways__overlay1 {
+    background-image: url(../images/walkways-background-td-2x.png);
+  }
+}
+.walkways__overlay1 .container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.walkways__overlay2 {
+  padding-bottom: 48px;
+  background-image: url(../images/beaches-background-m-1x.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .walkways__overlay2 {
+    background-image: url(../images/beaches-background-m-2x.png);
+  }
+}
+@media screen and (min-width: 768px) {
+  .walkways__overlay2 {
+    background-image: url(../images/beaches-background-td-1x.png);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .walkways__overlay2 {
+    background-image: url(../images/beaches-background-td-2x.png);
+  }
+}
+.walkways__overlay2 .container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.walkways__overlay2 .container .walkways__picture {
+  order: -1;
+}
+.walkways__picture {
+  display: block;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 0 auto;
+  width: 314px;
+}
+
+.explore__overlay {
+  background-image: url(../images/explore-background-m-1x.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .explore__overlay {
+    background-image: url(../images/explore-background-m-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .explore__overlay {
+    background-image: url(../images/explore-background-td-1x.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .explore__overlay {
+    background-image: url(../images/explore-background-td-2x.jpg);
+  }
+}
+
+.explore {
+  padding-top: 25px;
+  position: relative;
+}
+.explore__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 115%;
+  text-align: center;
+  color: var(--blue---background);
+  margin-bottom: 23px;
+}
+.explore .slider {
+  overflow-x: hidden;
+  width: 314px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  margin-bottom: 695px;
+}
+.explore .slider-list {
+  display: flex;
+  overflow: hidden;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
+  transition: transform 0.5s ease-in-out;
+  width: 1496px;
+}
+.explore .slider-list__item {
+  flex-shrink: 0;
+  width: 314px;
+  border-radius: 8px;
+}
+.explore .slider-list__item__content {
+  display: block;
+  line-height: 0;
+}
+.explore .slider-list__item__content img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+  object-fit: cover;
+}
+.explore .slider-buttons-list {
+  position: absolute;
+  width: 367px;
+  top: 63%;
+  left: 3.5px;
+  right: 0;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+.explore .slider-pagination-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+  padding: 0;
+  list-style: none;
+}
+.explore .slider-pagination-list__item {
+  width: 10px;
+  height: 10px;
+  background-color: #a0a8b3;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.explore .slider-pagination-list__item--active {
+  background-color: #f72c45;
+  width: 30px;
+  border-radius: 5px;
+}
+
+.numbers {
+  background: #020c21;
+  opacity: 0.9;
+  padding: 70px 0;
+}
+.numbers .container {
+  display: flex;
+  flex-direction: column;
+  gap: 57px;
+}
+.numbers__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 115%;
+  text-align: center;
+  color: var(--white);
+}
+.numbers__description {
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+.numbers .nlist {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+.numbers .nlist__item {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.numbers .nlist__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 115%;
+  text-align: center;
+  color: var(--main-color);
+}
+.numbers .nlist__description {
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.03em;
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
