--- a/sass/utilits/_variables.scss
+++ b/sass/utilits/_variables.scss
@@ -1,11 +1,13 @@
 :root {
     --main-color: #DD2242;
     --blue---background: #010a20;
-	--white: #fff;
-	--text-lighten: #e0e0e0;
-	--grey-reduced: #85a3b2;
-	--light-text: rgba(21, 20, 57, 0.4);
-	--paragraph-dark: #6f7787;
+    --white: #fff;
+    --text-lighten: #e0e0e0;
+    --grey-reduced: #85a3b2;
+    --light-text: rgba(21, 20, 57, 0.4);
+    --paragraph-dark: #6f7787;
+    --primary-color: #f72c45;
+    --dot-inactive-color: #a0a8b3;
     // ------------------------
     --font-family: "DM Sans", sans-serif;
     --second-family: "Roboto", sans-serif;
