--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,10 @@ textarea {
   --second-family: "Roboto", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-family);
   font-weight: 400;
@@ -113,6 +117,9 @@ body {
   letter-spacing: 0.01em;
   text-transform: uppercase;
   color: var(--white);
+}
+.logo__text--red {
+  color: var(--main-color);
 }
 .logo__rectangle {
   position: absolute;
@@ -717,4 +724,129 @@ body {
 .gallery .gallery-list__item {
   overflow: hidden;
   border-radius: 10px;
+}
+
+.getting {
+  padding-top: 29px;
+  padding-bottom: 73px;
+  background-color: #dce8f2;
+}
+.getting__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 115%;
+  text-align: center;
+  color: var(--blue---background);
+  margin-bottom: 45px;
+}
+.getting__button {
+  display: none;
+}
+.getting .getting-list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.getting .getting-list__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.getting .getting-list__number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 56px;
+  height: 56px;
+  border-radius: 100%;
+  background-color: var(--main-color);
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 144%;
+  text-align: center;
+  color: var(--white);
+  margin-bottom: 26px;
+}
+.getting .getting-list__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--blue---background);
+  margin-bottom: 5px;
+}
+.getting .getting-list__description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 5px;
+  color: var(--light-text);
+  max-height: 24px;
+  overflow: hidden;
+  transition: max-height 0.5s ease-out;
+}
+.getting .getting-list__description.is-open {
+  max-height: 170px;
+}
+.getting .getting-list__button {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--main-color);
+}
+.getting .getting-list__picture {
+  display: block;
+  width: 314px;
+  margin: 0 auto;
+  border-radius: 7px;
+  overflow: hidden;
+  margin-top: 32px;
+  margin-bottom: 40px;
+}
+
+.footer {
+  position: relative;
+  padding-top: 147px;
+  padding-bottom: 84px;
+  background-color: var(--blue---background);
+}
+.footer .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
+}
+.footer .address-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
+  margin-bottom: 36px;
+}
+.footer .address-list__link {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 156%;
+  letter-spacing: 0.03em;
+  color: var(--white);
+}
+.footer .address-social-list {
+  display: flex;
+  gap: 48px;
+}
+.footer__top-link {
+  width: 104px;
+  height: 104px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -40px;
+  left: 133px;
+  background-color: var(--main-color);
+  border-radius: 100%;
 }/*# sourceMappingURL=main.css.map */
