--- a/sass/utilits/_mixins.scss
+++ b/sass/utilits/_mixins.scss
@@ -41,3 +41,25 @@
 
     }
 }
+
+@mixin multi-transition($properties, $duration: 250ms, $timing-function: cubic-bezier(0.4, 0, 0.2, 1), $delay: 0s) {
+    $transitions: (
+    );
+
+@if type-of($properties)=="list" {
+    @each $prop in $properties {
+        $transitions: append($transitions, #{$prop} $duration $timing-function $delay, comma);
+    }
+}
+
+@else {
+    $transitions: #{$properties} $duration $timing-function $delay;
+}
+
+transition: $transitions;
+}
+
+@mixin flex-column {
+    display: flex;
+    flex-direction: column;
+}
