--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,6 +7,11 @@
     gap: 5px;
     position: relative;
 
+    @media screen and (min-width: 768px) {
+        margin: 0 auto;
+        margin-bottom: 5px;
+    }
+
     // background-color: black;
     
 
