--- a/sass/layout/_01-header.scss
+++ b/sass/layout/_01-header.scss
@@ -7,19 +7,42 @@
         @include flex;
         align-items: center;
 
+        @media screen and (min-width: 768px) {
+            display: block;
+        }
+
         .header__nav {
             margin-left: 95px;
             display: flex;
 
             .hlist {
                 display: none;
+
+                @media screen and (min-width: 768px) {
+                    display: flex;
+                    gap: 49px;
+                    margin-right: 49px;
+                }
+
+                &__link {
+                    text-transform: uppercase;
+                    color: var(--white);
+                }
             }
 
             .hlist-mobile {
                 display: flex;
                 gap: 30px;
 
+                &__item {
+                    @include flex;
+                    align-items: center;
+                }
 
+                &__button {
+                    @include flex;
+                    align-items: center;
+                }
             }
         }
     }
