--- a/sass/layout/_05-numbers.scss
+++ b/sass/layout/_05-numbers.scss
@@ -22,6 +22,11 @@
         line-height: 150%;
         letter-spacing: 0.03em;
         text-align: center;
+
+        @media screen and (min-width: 768px) {
+            width: 496px;
+            margin: 0 auto;
+        }
     }
 
     .nlist {
@@ -49,6 +54,11 @@
             line-height: 150%;
             letter-spacing: 0.03em;
             text-align: center;
+
+            @media screen and (min-width: 768px) {
+                width: 340px;
+                margin: 0 auto;
+            }
         }
     }
 }
