--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./base/common";
 @import "./components/containers";
 @import "./components/logo";
+@import "./components/burger-menu";
 @import "./layout/01-header";
 @import "./layout/02-hero";
 @import "./layout/03-travel";
